# src/features/shared/auth/infrastructure/mappers/UserMapper.ts
@@ -8,6 +8,7 @@ export const toDomainUser = (user: User): UserDomain => ({
   email: user.email,
   role: user.role,
   isPublicProfile: user.isPublicProfile,
+  emailVerifiedAt: user.emailVerifiedAt ?? null,
   createdAt: user.createdAt!,
   updatedAt: user.updatedAt!,
   deletedAt: user.deletedAt,
@@ -19,6 +20,9 @@ export const toUserResponseDTO = (user: UserDomain): UserResponseDTO => ({
   email: user.email,
   role: user.role,
   isPublicProfile: user.isPublicProfile,
+  emailVerifiedAt: user.emailVerifiedAt
+    ? user.emailVerifiedAt.toISOString()
+    : null,
   createdAt: user.createdAt.toISOString(),
   updatedAt: user.updatedAt.toISOString(),
 });
